[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dala-hydro"
version = "1.2.0"
description = "Data-anchored lead-adaptive ranking of high-flow exceedances"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Xue Li"},
  {name = "Li Wang"},
  {name = "Qijia Yuan"},
  {name = "Zihan Zhang"},
  {name = "Jian Sha"}
]
dependencies = [
  "joblib>=1.3",
  "matplotlib>=3.8",
  "netCDF4>=1.6",
  "numpy>=1.26",
  "openpyxl>=3.1",
  "pandas>=2.1",
  "PyYAML>=6.0",
  "scikit-learn>=1.4",
  "scipy>=1.11",
  "torch>=2.2",
  "tqdm>=4.66",
  "xarray>=2024.1"
]

[project.urls]
Repository = "https://github.com/lxxwgdxg/density-aware-event-memory"
Archive = "https://doi.org/10.5281/zenodo.21277559"
Data = "https://doi.org/10.5281/zenodo.21320182"

[tool.setuptools.packages.find]
where = ["src"]
